# Momentis

./: README.md  pyproject.toml  requirements.txt
momentis/: .momentis.py  FrameBuffer.py  _FrameBuffer.pyx  __init__.py  __main__.py  momentis.py  momentis.pyx  moviepy_writer.py  setup.py  utils.py  utils.pyx
src/: FrameBuffer.py  branch.py  interative.py  main.py  multithreaded_cv.py  utils.py
