[project]
name = "momentis"
version = "0.1.0"
author = ["jMujunen <jMujunen@github/com>"]
readme = "README.md"
description = "Trim video game clips into a short video containing only the relevant frames"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=1.0.3",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pytesseract>=0.3.13",
]
