[project]
name = "momentis"
version = "0.1.0"
author = ["jMujunen <jMujunen@github/com>"]
readme = "README.md"
description = "Trim video game clips into a short video containing only the relevant frames"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "imagehash>=4.3.1",
    "moviepy>=1.0.3",
    "opencv-python>=4.10.0.84",
    "pytesseract>=0.3.13",
    "tesserocr>=2.8.0",
]
