[project]
name = "momentis"
version = "0.1.0"
authors = [
    { name = "jMujunen", email = "jMujunen@github.com" }
]
readme = "README.md"
description = "Trim video game clips into a short video containing only the relevant frames"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "imagehash>=4.3.1",
    "moviepy>=2.1.2",
    "opencv-python>=4.10.0",
    "tesserocr>=2.8.0",
    "tqdm>=4.66.5",
]

[project.scripts]
momentis = "momentis.__main__:parse_args"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["momentis/*"]
